<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity">

    <ImageView
        android:id="@+id/img_app"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0"
        android:layout_marginTop="-80dp"
        android:contentDescription="@string/icon_application"
        android:src="@drawable/spell_book"
        android:transitionName="imgIcon"
        tools:ignore="VisualLintBounds" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_vertical_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".1"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_vertical_end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".9"/>

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/gl_horizontal"
        app:layout_constraintStart_toStartOf="@id/gl_vertical_start"
        android:text="@string/welcome_in_story_app"
        android:textSize="22sp"
        android:textStyle="bold"
        android:transitionName="title"/>

    <TextView
        android:id="@+id/tv_welcome_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome"
        app:layout_constraintStart_toStartOf="@id/gl_vertical_start"
        android:layout_marginTop="6dp"
        android:text="@string/let_s_make_your_account"
        android:textSize="16sp"
        android:transitionName="version"/>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome_desc"
        app:layout_constraintStart_toStartOf="@id/gl_vertical_start"
        app:layout_constraintEnd_toEndOf="@id/gl_vertical_end"
        android:layout_marginTop="16dp"
        android:text="@string/name"
        android:textSize="18sp"
        android:textStyle="bold"
        android:labelFor="@id/edt_name"
        android:alpha="0"
        tools:alpha="1"/>

    <dev.mayutama.project.storyappsubm.ui.components.EditTextCustom
        android:id="@+id/edt_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        app:layout_constraintStart_toStartOf="@id/gl_vertical_start"
        app:layout_constraintEnd_toEndOf="@id/gl_vertical_end"
        android:inputType="text"
        android:background="@drawable/bg_input_outline"
        android:layout_marginTop="4dp"
        tools:ignore="VisualLintTextFieldSize"
        android:alpha="0"
        tools:alpha="1"
        app:validate="required"/>

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edt_name"
        app:layout_constraintStart_toStartOf="@id/gl_vertical_start"
        app:layout_constraintEnd_toEndOf="@id/gl_vertical_end"
        android:layout_marginTop="8dp"
        android:text="@string/email"
        android:textSize="18sp"
        android:textStyle="bold"
        android:labelFor="@id/edt_email"
        android:alpha="0"
        tools:alpha="1"/>

    <dev.mayutama.project.storyappsubm.ui.components.EditTextCustom
        android:id="@+id/edt_email"
        android:layout_width=                                                                                                                                                                                                                                                      "0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_email"
        app:layout_constraintStart_toStartOf="@id/gl_vertical_start"
        app:layout_constraintEnd_toEndOf="@id/gl_vertical_end"
        android:inputType="textEmailAddress"
        android:background="@drawable/bg_input_outline"
        android:layout_marginTop="4dp"
        tools:ignore="VisualLintTextFieldSize"
        android:alpha="0"
        tools:alpha="1"
        app:validate="required"/>

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edt_email"
        app:layout_constraintStart_toStartOf="@id/gl_vertical_start"
        app:layout_constraintEnd_toEndOf="@id/gl_vertical_end"
        android:layout_marginTop="8dp"
        android:text="@string/password"
        android:textSize="18sp"
        android:textStyle="bold"
        android:labelFor="@id/edt_password"
        android:alpha="0"
        tools:alpha="1"/>

    <dev.mayutama.project.storyappsubm.ui.components.EditTextCustom
        android:id="@+id/edt_password"
        style="@style/ThemeOverlay.Material3.TextInputEditText.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_password"
        app:layout_constraintStart_toStartOf="@id/gl_vertical_start"
        app:layout_constraintEnd_toEndOf="@id/gl_vertical_end"
        android:inputType="textPassword"
        android:background="@drawable/bg_input_outline"
        android:layout_marginTop="4dp"
        app:validate="min_8"
        tools:ignore="VisualLintTextFieldSize"
        android:alpha="0"
        tools:alpha="1" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edt_password"
        app:layout_constraintStart_toStartOf="@id/gl_vertical_start"
        app:layout_constraintEnd_toEndOf="@id/gl_vertical_end"
        android:layout_marginTop="16dp"
        style="@style/Widget.AppCompat.Button"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:padding="0dp"
        android:background="@drawable/bg_filled_primary"
        tools:ignore="VisualLintButtonSize"
        android:alpha="0"
        tools:alpha="1"/>

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/do_you_have_an_account_click_here_to_login"
        android:layout_marginTop="16dp"
        android:alpha="0"
        tools:alpha="1"
        android:textSize="16sp"/>

    <include
        android:id="@+id/loading_layout"
        layout="@layout/layout_animation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>